--- a/synthesis/CMakeLists.txt
+++ b/synthesis/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_synthesis_target(icestick ${CMAKE_CURRENT_SOURCE_DIR}/icestick.pcf
-        #${CMAKE_CURRENT_SOURCE_DIR}/../src/src_file.v
+        ${CMAKE_CURRENT_SOURCE_DIR}/../src/*.v
     )
