Sample USB UART

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(PROJECT_NAME)
+project(test_usb_streaming)
 
 set(USING_XILINX 0 CACHE STRING "Xilinx Option")
 set(USING_ALTERA 0 CACHE STRING "Altera Option")
