Reverted accidental project commit

--- a/synthesis/CMakeLists.txt
+++ b/synthesis/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_synthesis_target(icestick PCF ${CMAKE_CURRENT_SOURCE_DIR}/icestick.pcf
-        BLOCKRAMFILES ${CMAKE_CURRENT_SOURCE_DIR}/icestick_bram.hex
-        SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/*.v
-    )
+#add_synthesis_target(icestick PCF ${CMAKE_CURRENT_SOURCE_DIR}/icestick.pcf
+#        BLOCKRAMFILES ${CMAKE_CURRENT_SOURCE_DIR}/icestick_bram.hex
+#        SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/*.v
+#    )
