--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -6,7 +6,7 @@
 #    add_simulation_target(${target} ${bench} ${src_files})
 #endforeach(bench)
 
-add_simulation_target(buf_ram_tb
-        BLOCKRAMFILES ${CMAKE_CURRENT_SOURCE_DIR}/buf_ram_tb.hex
-        SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/buf_ram_tb.v
-                ${CMAKE_CURRENT_SOURCE_DIR}/../src/buf_ram.v)
+#add_simulation_target(buf_ram_tb
+#        BLOCKRAMFILES ${CMAKE_CURRENT_SOURCE_DIR}/buf_ram_tb.hex
+#        SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/buf_ram_tb.v
+#                ${CMAKE_CURRENT_SOURCE_DIR}/../src/buf_ram.v)
